parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     empty -> <empty>
Rule 2     programa -> PROGRAMA ID SEMICOLON addMain vars createTable func_declarations main showstacks
Rule 3     addMain -> empty
Rule 4     createTable -> empty
Rule 5     vars -> VAR var2
Rule 6     var1 -> tipo lista_ids SEMICOLON
Rule 7     var2 -> var1 var2
Rule 8     var2 -> var1
Rule 9     var_decl -> ID
Rule 10    var_decl -> ID LBRACKET CTEI RBRACKET
Rule 11    var_decl -> ID LBRACKET exp RBRACKET
Rule 12    lista_ids -> lista_ids COMMA var_decl
Rule 13    lista_ids -> var_decl
Rule 14    tipo -> INT
Rule 15    tipo -> FLOAT
Rule 16    tipo -> CHAR
Rule 17    func_declarations -> func_decl funcBody func_declarations
Rule 18    func_declarations -> empty
Rule 19    func_decl -> FUNCION func2 func3 LPAREN params RPAREN vars
Rule 20    func_decl -> FUNCION func2 func3 LPAREN RPAREN vars
Rule 21    func_decl -> FUNCION func2 func3 LPAREN params RPAREN
Rule 22    func_decl -> FUNCION func2 func3 LPAREN RPAREN
Rule 23    funcBody -> bloque endFunc
Rule 24    func3 -> ID
Rule 25    func2 -> tipo
Rule 26    func2 -> VOID
Rule 27    endFunc -> empty
Rule 28    bloque -> LCURLY bloque1 RCURLY
Rule 29    bloque1 -> estatuto bloque1
Rule 30    bloque1 -> empty
Rule 31    estatuto -> asig
Rule 32    estatuto -> cond
Rule 33    estatuto -> retorno
Rule 34    estatuto -> lectura
Rule 35    estatuto -> escritura
Rule 36    estatuto -> llamada SEMICOLON
Rule 37    estatuto -> repeticion
Rule 38    asig -> variable addVar EQUAL addAsig exp genAsig SEMICOLON
Rule 39    addVar -> <empty>
Rule 40    addAsig -> <empty>
Rule 41    genAsig -> <empty>
Rule 42    main -> printfuncs PRINCIPAL LPAREN RPAREN fillFirst bloque mergetables
Rule 43    fillFirst -> empty
Rule 44    param_decl -> tipo ID
Rule 45    params -> params COMMA param_decl
Rule 46    params -> param_decl
Rule 47    retorno -> REGRESA LPAREN exp RPAREN SEMICOLON
Rule 48    llamada -> iniciaLlamada llamada2 endLlamada RPAREN
Rule 49    llamada -> iniciaLlamada endLlamada RPAREN
Rule 50    iniciaLlamada -> ID LPAREN
Rule 51    llamada2 -> exp COMMA llamada2
Rule 52    llamada2 -> exp
Rule 53    endLlamada -> <empty>
Rule 54    lectura -> LEE LPAREN variable RPAREN SEMICOLON
Rule 55    escritura -> ESCRIBE LPAREN escritura2 RPAREN SEMICOLON
Rule 56    escritura1 -> CTES
Rule 57    escritura1 -> exp
Rule 58    escritura2 -> escritura1 addescritura COMMA escritura2
Rule 59    escritura2 -> escritura1 addescritura
Rule 60    addescritura -> <empty>
Rule 61    cond -> SI LPAREN exp RPAREN cond1 ENTONCES bloque elsePart cond2
Rule 62    cond1 -> empty
Rule 63    cond2 -> empty
Rule 64    elsePart -> SINO elseActions bloque
Rule 65    elsePart -> empty
Rule 66    elseActions -> empty
Rule 67    repeticion -> condicional
Rule 68    repeticion -> nocondicional
Rule 69    condicional -> MIENTRAS regWhile LPAREN exp RPAREN whileCond HAZ bloque endWhile
Rule 70    regWhile -> empty
Rule 71    whileCond -> empty
Rule 72    endWhile -> empty
Rule 73    nocondicional -> DESDE ID EQUAL CTEI HASTA CTEI createFor HACER bloque endFor
Rule 74    createFor -> <empty>
Rule 75    endFor -> <empty>
Rule 76    exp -> texp exp1
Rule 77    exp1 -> OR texp exp1
Rule 78    exp1 -> empty
Rule 79    texp -> gexp texp1
Rule 80    texp1 -> AND gexp texp1
Rule 81    texp1 -> empty
Rule 82    gexp -> mexp gexp1
Rule 83    gexp1 -> gexp2 mexp gexp1
Rule 84    gexp1 -> empty
Rule 85    gexp2 -> LESS
Rule 86    gexp2 -> LESSO
Rule 87    gexp2 -> GREATER
Rule 88    gexp2 -> GREATERO
Rule 89    gexp2 -> NOTEQUAL
Rule 90    gexp2 -> EQUALS
Rule 91    mexp -> termino mexp1
Rule 92    mexp1 -> mexp2 termino mexp1
Rule 93    mexp1 -> empty
Rule 94    mexp2 -> PLUS
Rule 95    mexp2 -> MINUS
Rule 96    termino -> factor termino1
Rule 97    termino1 -> TIMES factor termino1
Rule 98    termino1 -> DIVIDE factor termino1
Rule 99    termino1 -> empty
Rule 100   factor -> LPAREN exp RPAREN
Rule 101   factor -> varcte
Rule 102   factor -> variable
Rule 103   factor -> llamada
Rule 104   variable -> ID
Rule 105   varcte -> CTEI
Rule 106   varcte -> CTEF
Rule 107   varcte -> CTEC
Rule 108   mergetables -> empty
Rule 109   showstacks -> empty
Rule 110   printfuncs -> empty

Terminals, with rules where they appear

AND                  : 80
CHAR                 : 16
COMMA                : 12 45 51 58
CTEC                 : 107
CTEF                 : 106
CTEI                 : 10 73 73 105
CTES                 : 56
DESDE                : 73
DIVIDE               : 98
ENTONCES             : 61
EQUAL                : 38 73
EQUALS               : 90
ESCRIBE              : 55
FLOAT                : 15
FUNCION              : 19 20 21 22
GREATER              : 87
GREATERO             : 88
HACER                : 73
HASTA                : 73
HAZ                  : 69
ID                   : 2 9 10 11 24 44 50 73 104
INT                  : 14
LBRACKET             : 10 11
LCURLY               : 28
LEE                  : 54
LESS                 : 85
LESSO                : 86
LPAREN               : 19 20 21 22 42 47 50 54 55 61 69 100
MIENTRAS             : 69
MINUS                : 95
NOTEQUAL             : 89
OR                   : 77
PLUS                 : 94
PRINCIPAL            : 42
PROGRAMA             : 2
RBRACKET             : 10 11
RCURLY               : 28
REGRESA              : 47
RPAREN               : 19 20 21 22 42 47 48 49 54 55 61 69 100
SEMICOLON            : 2 6 36 38 47 54 55
SI                   : 61
SINO                 : 64
TIMES                : 97
VAR                  : 5
VOID                 : 26
error                : 

Nonterminals, with rules where they appear

addAsig              : 38
addMain              : 2
addVar               : 38
addescritura         : 58 59
asig                 : 31
bloque               : 23 42 61 64 69 73
bloque1              : 28 29
cond                 : 32
cond1                : 61
cond2                : 61
condicional          : 67
createFor            : 73
createTable          : 2
elseActions          : 64
elsePart             : 61
empty                : 3 4 18 27 30 43 62 63 65 66 70 71 72 78 81 84 93 99 108 109 110
endFor               : 73
endFunc              : 23
endLlamada           : 48 49
endWhile             : 69
escritura            : 35
escritura1           : 58 59
escritura2           : 55 58
estatuto             : 29
exp                  : 11 38 47 51 52 57 61 69 100
exp1                 : 76 77
factor               : 96 97 98
fillFirst            : 42
func2                : 19 20 21 22
func3                : 19 20 21 22
funcBody             : 17
func_decl            : 17
func_declarations    : 2 17
genAsig              : 38
gexp                 : 79 80
gexp1                : 82 83
gexp2                : 83
iniciaLlamada        : 48 49
lectura              : 34
lista_ids            : 6 12
llamada              : 36 103
llamada2             : 48 51
main                 : 2
mergetables          : 42
mexp                 : 82 83
mexp1                : 91 92
mexp2                : 92
nocondicional        : 68
param_decl           : 45 46
params               : 19 21 45
printfuncs           : 42
programa             : 0
regWhile             : 69
repeticion           : 37
retorno              : 33
showstacks           : 2
termino              : 91 92
termino1             : 96 97 98
texp                 : 76 77
texp1                : 79 80
tipo                 : 6 25 44
var1                 : 7 8
var2                 : 5 7
var_decl             : 12 13
varcte               : 101
variable             : 38 54 102
vars                 : 2 19 20
whileCond            : 69

Parsing method: LALR

state 0

    (0) S' -> . programa
    (2) programa -> . PROGRAMA ID SEMICOLON addMain vars createTable func_declarations main showstacks

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (2) programa -> PROGRAMA . ID SEMICOLON addMain vars createTable func_declarations main showstacks

    ID              shift and go to state 3


state 3

    (2) programa -> PROGRAMA ID . SEMICOLON addMain vars createTable func_declarations main showstacks

    SEMICOLON       shift and go to state 4


state 4

    (2) programa -> PROGRAMA ID SEMICOLON . addMain vars createTable func_declarations main showstacks
    (3) addMain -> . empty
    (1) empty -> .

    VAR             reduce using rule 1 (empty -> .)

    addMain                        shift and go to state 5
    empty                          shift and go to state 6

state 5

    (2) programa -> PROGRAMA ID SEMICOLON addMain . vars createTable func_declarations main showstacks
    (5) vars -> . VAR var2

    VAR             shift and go to state 8

    vars                           shift and go to state 7

state 6

    (3) addMain -> empty .

    VAR             reduce using rule 3 (addMain -> empty .)


state 7

    (2) programa -> PROGRAMA ID SEMICOLON addMain vars . createTable func_declarations main showstacks
    (4) createTable -> . empty
    (1) empty -> .

    FUNCION         reduce using rule 1 (empty -> .)
    PRINCIPAL       reduce using rule 1 (empty -> .)

    createTable                    shift and go to state 9
    empty                          shift and go to state 10

state 8

    (5) vars -> VAR . var2
    (7) var2 -> . var1 var2
    (8) var2 -> . var1
    (6) var1 -> . tipo lista_ids SEMICOLON
    (14) tipo -> . INT
    (15) tipo -> . FLOAT
    (16) tipo -> . CHAR

    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    var2                           shift and go to state 11
    var1                           shift and go to state 12
    tipo                           shift and go to state 13

state 9

    (2) programa -> PROGRAMA ID SEMICOLON addMain vars createTable . func_declarations main showstacks
    (17) func_declarations -> . func_decl funcBody func_declarations
    (18) func_declarations -> . empty
    (19) func_decl -> . FUNCION func2 func3 LPAREN params RPAREN vars
    (20) func_decl -> . FUNCION func2 func3 LPAREN RPAREN vars
    (21) func_decl -> . FUNCION func2 func3 LPAREN params RPAREN
    (22) func_decl -> . FUNCION func2 func3 LPAREN RPAREN
    (1) empty -> .

    FUNCION         shift and go to state 20
    PRINCIPAL       reduce using rule 1 (empty -> .)

    func_declarations              shift and go to state 17
    func_decl                      shift and go to state 18
    empty                          shift and go to state 19

state 10

    (4) createTable -> empty .

    FUNCION         reduce using rule 4 (createTable -> empty .)
    PRINCIPAL       reduce using rule 4 (createTable -> empty .)


state 11

    (5) vars -> VAR var2 .

    FUNCION         reduce using rule 5 (vars -> VAR var2 .)
    PRINCIPAL       reduce using rule 5 (vars -> VAR var2 .)
    LCURLY          reduce using rule 5 (vars -> VAR var2 .)


state 12

    (7) var2 -> var1 . var2
    (8) var2 -> var1 .
    (7) var2 -> . var1 var2
    (8) var2 -> . var1
    (6) var1 -> . tipo lista_ids SEMICOLON
    (14) tipo -> . INT
    (15) tipo -> . FLOAT
    (16) tipo -> . CHAR

    FUNCION         reduce using rule 8 (var2 -> var1 .)
    PRINCIPAL       reduce using rule 8 (var2 -> var1 .)
    LCURLY          reduce using rule 8 (var2 -> var1 .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    var1                           shift and go to state 12
    var2                           shift and go to state 21
    tipo                           shift and go to state 13

state 13

    (6) var1 -> tipo . lista_ids SEMICOLON
    (12) lista_ids -> . lista_ids COMMA var_decl
    (13) lista_ids -> . var_decl
    (9) var_decl -> . ID
    (10) var_decl -> . ID LBRACKET CTEI RBRACKET
    (11) var_decl -> . ID LBRACKET exp RBRACKET

    ID              shift and go to state 24

    lista_ids                      shift and go to state 22
    var_decl                       shift and go to state 23

state 14

    (14) tipo -> INT .

    ID              reduce using rule 14 (tipo -> INT .)


state 15

    (15) tipo -> FLOAT .

    ID              reduce using rule 15 (tipo -> FLOAT .)


state 16

    (16) tipo -> CHAR .

    ID              reduce using rule 16 (tipo -> CHAR .)


state 17

    (2) programa -> PROGRAMA ID SEMICOLON addMain vars createTable func_declarations . main showstacks
    (42) main -> . printfuncs PRINCIPAL LPAREN RPAREN fillFirst bloque mergetables
    (110) printfuncs -> . empty
    (1) empty -> .

    PRINCIPAL       reduce using rule 1 (empty -> .)

    main                           shift and go to state 25
    printfuncs                     shift and go to state 26
    empty                          shift and go to state 27

state 18

    (17) func_declarations -> func_decl . funcBody func_declarations
    (23) funcBody -> . bloque endFunc
    (28) bloque -> . LCURLY bloque1 RCURLY

    LCURLY          shift and go to state 30

    funcBody                       shift and go to state 28
    bloque                         shift and go to state 29

state 19

    (18) func_declarations -> empty .

    PRINCIPAL       reduce using rule 18 (func_declarations -> empty .)


state 20

    (19) func_decl -> FUNCION . func2 func3 LPAREN params RPAREN vars
    (20) func_decl -> FUNCION . func2 func3 LPAREN RPAREN vars
    (21) func_decl -> FUNCION . func2 func3 LPAREN params RPAREN
    (22) func_decl -> FUNCION . func2 func3 LPAREN RPAREN
    (25) func2 -> . tipo
    (26) func2 -> . VOID
    (14) tipo -> . INT
    (15) tipo -> . FLOAT
    (16) tipo -> . CHAR

    VOID            shift and go to state 33
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    func2                          shift and go to state 31
    tipo                           shift and go to state 32

state 21

    (7) var2 -> var1 var2 .

    FUNCION         reduce using rule 7 (var2 -> var1 var2 .)
    PRINCIPAL       reduce using rule 7 (var2 -> var1 var2 .)
    LCURLY          reduce using rule 7 (var2 -> var1 var2 .)


state 22

    (6) var1 -> tipo lista_ids . SEMICOLON
    (12) lista_ids -> lista_ids . COMMA var_decl

    SEMICOLON       shift and go to state 34
    COMMA           shift and go to state 35


state 23

    (13) lista_ids -> var_decl .

    SEMICOLON       reduce using rule 13 (lista_ids -> var_decl .)
    COMMA           reduce using rule 13 (lista_ids -> var_decl .)


state 24

    (9) var_decl -> ID .
    (10) var_decl -> ID . LBRACKET CTEI RBRACKET
    (11) var_decl -> ID . LBRACKET exp RBRACKET

    SEMICOLON       reduce using rule 9 (var_decl -> ID .)
    COMMA           reduce using rule 9 (var_decl -> ID .)
    LBRACKET        shift and go to state 36


state 25

    (2) programa -> PROGRAMA ID SEMICOLON addMain vars createTable func_declarations main . showstacks
    (109) showstacks -> . empty
    (1) empty -> .

    $end            reduce using rule 1 (empty -> .)

    showstacks                     shift and go to state 37
    empty                          shift and go to state 38

state 26

    (42) main -> printfuncs . PRINCIPAL LPAREN RPAREN fillFirst bloque mergetables

    PRINCIPAL       shift and go to state 39


state 27

    (110) printfuncs -> empty .

    PRINCIPAL       reduce using rule 110 (printfuncs -> empty .)


state 28

    (17) func_declarations -> func_decl funcBody . func_declarations
    (17) func_declarations -> . func_decl funcBody func_declarations
    (18) func_declarations -> . empty
    (19) func_decl -> . FUNCION func2 func3 LPAREN params RPAREN vars
    (20) func_decl -> . FUNCION func2 func3 LPAREN RPAREN vars
    (21) func_decl -> . FUNCION func2 func3 LPAREN params RPAREN
    (22) func_decl -> . FUNCION func2 func3 LPAREN RPAREN
    (1) empty -> .

    FUNCION         shift and go to state 20
    PRINCIPAL       reduce using rule 1 (empty -> .)

    func_decl                      shift and go to state 18
    func_declarations              shift and go to state 40
    empty                          shift and go to state 19

state 29

    (23) funcBody -> bloque . endFunc
    (27) endFunc -> . empty
    (1) empty -> .

    FUNCION         reduce using rule 1 (empty -> .)
    PRINCIPAL       reduce using rule 1 (empty -> .)

    endFunc                        shift and go to state 41
    empty                          shift and go to state 42

state 30

    (28) bloque -> LCURLY . bloque1 RCURLY
    (29) bloque1 -> . estatuto bloque1
    (30) bloque1 -> . empty
    (31) estatuto -> . asig
    (32) estatuto -> . cond
    (33) estatuto -> . retorno
    (34) estatuto -> . lectura
    (35) estatuto -> . escritura
    (36) estatuto -> . llamada SEMICOLON
    (37) estatuto -> . repeticion
    (1) empty -> .
    (38) asig -> . variable addVar EQUAL addAsig exp genAsig SEMICOLON
    (61) cond -> . SI LPAREN exp RPAREN cond1 ENTONCES bloque elsePart cond2
    (47) retorno -> . REGRESA LPAREN exp RPAREN SEMICOLON
    (54) lectura -> . LEE LPAREN variable RPAREN SEMICOLON
    (55) escritura -> . ESCRIBE LPAREN escritura2 RPAREN SEMICOLON
    (48) llamada -> . iniciaLlamada llamada2 endLlamada RPAREN
    (49) llamada -> . iniciaLlamada endLlamada RPAREN
    (67) repeticion -> . condicional
    (68) repeticion -> . nocondicional
    (104) variable -> . ID
    (50) iniciaLlamada -> . ID LPAREN
    (69) condicional -> . MIENTRAS regWhile LPAREN exp RPAREN whileCond HAZ bloque endWhile
    (73) nocondicional -> . DESDE ID EQUAL CTEI HASTA CTEI createFor HACER bloque endFor

    RCURLY          reduce using rule 1 (empty -> .)
    SI              shift and go to state 54
    REGRESA         shift and go to state 55
    LEE             shift and go to state 56
    ESCRIBE         shift and go to state 57
    ID              shift and go to state 61
    MIENTRAS        shift and go to state 62
    DESDE           shift and go to state 63

    bloque1                        shift and go to state 43
    estatuto                       shift and go to state 44
    empty                          shift and go to state 45
    asig                           shift and go to state 46
    cond                           shift and go to state 47
    retorno                        shift and go to state 48
    lectura                        shift and go to state 49
    escritura                      shift and go to state 50
    llamada                        shift and go to state 51
    repeticion                     shift and go to state 52
    variable                       shift and go to state 53
    iniciaLlamada                  shift and go to state 58
    condicional                    shift and go to state 59
    nocondicional                  shift and go to state 60

state 31

    (19) func_decl -> FUNCION func2 . func3 LPAREN params RPAREN vars
    (20) func_decl -> FUNCION func2 . func3 LPAREN RPAREN vars
    (21) func_decl -> FUNCION func2 . func3 LPAREN params RPAREN
    (22) func_decl -> FUNCION func2 . func3 LPAREN RPAREN
    (24) func3 -> . ID

    ID              shift and go to state 65

    func3                          shift and go to state 64

state 32

    (25) func2 -> tipo .

    ID              reduce using rule 25 (func2 -> tipo .)


state 33

    (26) func2 -> VOID .

    ID              reduce using rule 26 (func2 -> VOID .)


state 34

    (6) var1 -> tipo lista_ids SEMICOLON .

    INT             reduce using rule 6 (var1 -> tipo lista_ids SEMICOLON .)
    FLOAT           reduce using rule 6 (var1 -> tipo lista_ids SEMICOLON .)
    CHAR            reduce using rule 6 (var1 -> tipo lista_ids SEMICOLON .)
    FUNCION         reduce using rule 6 (var1 -> tipo lista_ids SEMICOLON .)
    PRINCIPAL       reduce using rule 6 (var1 -> tipo lista_ids SEMICOLON .)
    LCURLY          reduce using rule 6 (var1 -> tipo lista_ids SEMICOLON .)


state 35

    (12) lista_ids -> lista_ids COMMA . var_decl
    (9) var_decl -> . ID
    (10) var_decl -> . ID LBRACKET CTEI RBRACKET
    (11) var_decl -> . ID LBRACKET exp RBRACKET

    ID              shift and go to state 24

    var_decl                       shift and go to state 66

state 36

    (10) var_decl -> ID LBRACKET . CTEI RBRACKET
    (11) var_decl -> ID LBRACKET . exp RBRACKET
    (76) exp -> . texp exp1
    (79) texp -> . gexp texp1
    (82) gexp -> . mexp gexp1
    (91) mexp -> . termino mexp1
    (96) termino -> . factor termino1
    (100) factor -> . LPAREN exp RPAREN
    (101) factor -> . varcte
    (102) factor -> . variable
    (103) factor -> . llamada
    (105) varcte -> . CTEI
    (106) varcte -> . CTEF
    (107) varcte -> . CTEC
    (104) variable -> . ID
    (48) llamada -> . iniciaLlamada llamada2 endLlamada RPAREN
    (49) llamada -> . iniciaLlamada endLlamada RPAREN
    (50) iniciaLlamada -> . ID LPAREN

    CTEI            shift and go to state 67
    LPAREN          shift and go to state 74
    CTEF            shift and go to state 78
    CTEC            shift and go to state 79
    ID              shift and go to state 61

    exp                            shift and go to state 68
    texp                           shift and go to state 69
    gexp                           shift and go to state 70
    mexp                           shift and go to state 71
    termino                        shift and go to state 72
    factor                         shift and go to state 73
    varcte                         shift and go to state 75
    variable                       shift and go to state 76
    llamada                        shift and go to state 77
    iniciaLlamada                  shift and go to state 58

state 37

    (2) programa -> PROGRAMA ID SEMICOLON addMain vars createTable func_declarations main showstacks .

    $end            reduce using rule 2 (programa -> PROGRAMA ID SEMICOLON addMain vars createTable func_declarations main showstacks .)


state 38

    (109) showstacks -> empty .

    $end            reduce using rule 109 (showstacks -> empty .)


state 39

    (42) main -> printfuncs PRINCIPAL . LPAREN RPAREN fillFirst bloque mergetables

    LPAREN          shift and go to state 80


state 40

    (17) func_declarations -> func_decl funcBody func_declarations .

    PRINCIPAL       reduce using rule 17 (func_declarations -> func_decl funcBody func_declarations .)


state 41

    (23) funcBody -> bloque endFunc .

    FUNCION         reduce using rule 23 (funcBody -> bloque endFunc .)
    PRINCIPAL       reduce using rule 23 (funcBody -> bloque endFunc .)


state 42

    (27) endFunc -> empty .

    FUNCION         reduce using rule 27 (endFunc -> empty .)
    PRINCIPAL       reduce using rule 27 (endFunc -> empty .)


state 43

    (28) bloque -> LCURLY bloque1 . RCURLY

    RCURLY          shift and go to state 81


state 44

    (29) bloque1 -> estatuto . bloque1
    (29) bloque1 -> . estatuto bloque1
    (30) bloque1 -> . empty
    (31) estatuto -> . asig
    (32) estatuto -> . cond
    (33) estatuto -> . retorno
    (34) estatuto -> . lectura
    (35) estatuto -> . escritura
    (36) estatuto -> . llamada SEMICOLON
    (37) estatuto -> . repeticion
    (1) empty -> .
    (38) asig -> . variable addVar EQUAL addAsig exp genAsig SEMICOLON
    (61) cond -> . SI LPAREN exp RPAREN cond1 ENTONCES bloque elsePart cond2
    (47) retorno -> . REGRESA LPAREN exp RPAREN SEMICOLON
    (54) lectura -> . LEE LPAREN variable RPAREN SEMICOLON
    (55) escritura -> . ESCRIBE LPAREN escritura2 RPAREN SEMICOLON
    (48) llamada -> . iniciaLlamada llamada2 endLlamada RPAREN
    (49) llamada -> . iniciaLlamada endLlamada RPAREN
    (67) repeticion -> . condicional
    (68) repeticion -> . nocondicional
    (104) variable -> . ID
    (50) iniciaLlamada -> . ID LPAREN
    (69) condicional -> . MIENTRAS regWhile LPAREN exp RPAREN whileCond HAZ bloque endWhile
    (73) nocondicional -> . DESDE ID EQUAL CTEI HASTA CTEI createFor HACER bloque endFor

    RCURLY          reduce using rule 1 (empty -> .)
    SI              shift and go to state 54
    REGRESA         shift and go to state 55
    LEE             shift and go to state 56
    ESCRIBE         shift and go to state 57
    ID              shift and go to state 61
    MIENTRAS        shift and go to state 62
    DESDE           shift and go to state 63

    estatuto                       shift and go to state 44
    bloque1                        shift and go to state 82
    empty                          shift and go to state 45
    asig                           shift and go to state 46
    cond                           shift and go to state 47
    retorno                        shift and go to state 48
    lectura                        shift and go to state 49
    escritura                      shift and go to state 50
    llamada                        shift and go to state 51
    repeticion                     shift and go to state 52
    variable                       shift and go to state 53
    iniciaLlamada                  shift and go to state 58
    condicional                    shift and go to state 59
    nocondicional                  shift and go to state 60

state 45

    (30) bloque1 -> empty .

    RCURLY          reduce using rule 30 (bloque1 -> empty .)


state 46

    (31) estatuto -> asig .

    SI              reduce using rule 31 (estatuto -> asig .)
    REGRESA         reduce using rule 31 (estatuto -> asig .)
    LEE             reduce using rule 31 (estatuto -> asig .)
    ESCRIBE         reduce using rule 31 (estatuto -> asig .)
    ID              reduce using rule 31 (estatuto -> asig .)
    MIENTRAS        reduce using rule 31 (estatuto -> asig .)
    DESDE           reduce using rule 31 (estatuto -> asig .)
    RCURLY          reduce using rule 31 (estatuto -> asig .)


state 47

    (32) estatuto -> cond .

    SI              reduce using rule 32 (estatuto -> cond .)
    REGRESA         reduce using rule 32 (estatuto -> cond .)
    LEE             reduce using rule 32 (estatuto -> cond .)
    ESCRIBE         reduce using rule 32 (estatuto -> cond .)
    ID              reduce using rule 32 (estatuto -> cond .)
    MIENTRAS        reduce using rule 32 (estatuto -> cond .)
    DESDE           reduce using rule 32 (estatuto -> cond .)
    RCURLY          reduce using rule 32 (estatuto -> cond .)


state 48

    (33) estatuto -> retorno .

    SI              reduce using rule 33 (estatuto -> retorno .)
    REGRESA         reduce using rule 33 (estatuto -> retorno .)
    LEE             reduce using rule 33 (estatuto -> retorno .)
    ESCRIBE         reduce using rule 33 (estatuto -> retorno .)
    ID              reduce using rule 33 (estatuto -> retorno .)
    MIENTRAS        reduce using rule 33 (estatuto -> retorno .)
    DESDE           reduce using rule 33 (estatuto -> retorno .)
    RCURLY          reduce using rule 33 (estatuto -> retorno .)


state 49

    (34) estatuto -> lectura .

    SI              reduce using rule 34 (estatuto -> lectura .)
    REGRESA         reduce using rule 34 (estatuto -> lectura .)
    LEE             reduce using rule 34 (estatuto -> lectura .)
    ESCRIBE         reduce using rule 34 (estatuto -> lectura .)
    ID              reduce using rule 34 (estatuto -> lectura .)
    MIENTRAS        reduce using rule 34 (estatuto -> lectura .)
    DESDE           reduce using rule 34 (estatuto -> lectura .)
    RCURLY          reduce using rule 34 (estatuto -> lectura .)


state 50

    (35) estatuto -> escritura .

    SI              reduce using rule 35 (estatuto -> escritura .)
    REGRESA         reduce using rule 35 (estatuto -> escritura .)
    LEE             reduce using rule 35 (estatuto -> escritura .)
    ESCRIBE         reduce using rule 35 (estatuto -> escritura .)
    ID              reduce using rule 35 (estatuto -> escritura .)
    MIENTRAS        reduce using rule 35 (estatuto -> escritura .)
    DESDE           reduce using rule 35 (estatuto -> escritura .)
    RCURLY          reduce using rule 35 (estatuto -> escritura .)


state 51

    (36) estatuto -> llamada . SEMICOLON

    SEMICOLON       shift and go to state 83


state 52

    (37) estatuto -> repeticion .

    SI              reduce using rule 37 (estatuto -> repeticion .)
    REGRESA         reduce using rule 37 (estatuto -> repeticion .)
    LEE             reduce using rule 37 (estatuto -> repeticion .)
    ESCRIBE         reduce using rule 37 (estatuto -> repeticion .)
    ID              reduce using rule 37 (estatuto -> repeticion .)
    MIENTRAS        reduce using rule 37 (estatuto -> repeticion .)
    DESDE           reduce using rule 37 (estatuto -> repeticion .)
    RCURLY          reduce using rule 37 (estatuto -> repeticion .)


state 53

    (38) asig -> variable . addVar EQUAL addAsig exp genAsig SEMICOLON
    (39) addVar -> .

    EQUAL           reduce using rule 39 (addVar -> .)

    addVar                         shift and go to state 84

state 54

    (61) cond -> SI . LPAREN exp RPAREN cond1 ENTONCES bloque elsePart cond2

    LPAREN          shift and go to state 85


state 55

    (47) retorno -> REGRESA . LPAREN exp RPAREN SEMICOLON

    LPAREN          shift and go to state 86


state 56

    (54) lectura -> LEE . LPAREN variable RPAREN SEMICOLON

    LPAREN          shift and go to state 87


state 57

    (55) escritura -> ESCRIBE . LPAREN escritura2 RPAREN SEMICOLON

    LPAREN          shift and go to state 88


state 58

    (48) llamada -> iniciaLlamada . llamada2 endLlamada RPAREN
    (49) llamada -> iniciaLlamada . endLlamada RPAREN
    (51) llamada2 -> . exp COMMA llamada2
    (52) llamada2 -> . exp
    (53) endLlamada -> .
    (76) exp -> . texp exp1
    (79) texp -> . gexp texp1
    (82) gexp -> . mexp gexp1
    (91) mexp -> . termino mexp1
    (96) termino -> . factor termino1
    (100) factor -> . LPAREN exp RPAREN
    (101) factor -> . varcte
    (102) factor -> . variable
    (103) factor -> . llamada
    (105) varcte -> . CTEI
    (106) varcte -> . CTEF
    (107) varcte -> . CTEC
    (104) variable -> . ID
    (48) llamada -> . iniciaLlamada llamada2 endLlamada RPAREN
    (49) llamada -> . iniciaLlamada endLlamada RPAREN
    (50) iniciaLlamada -> . ID LPAREN

    RPAREN          reduce using rule 53 (endLlamada -> .)
    LPAREN          shift and go to state 74
    CTEI            shift and go to state 92
    CTEF            shift and go to state 78
    CTEC            shift and go to state 79
    ID              shift and go to state 61

    iniciaLlamada                  shift and go to state 58
    llamada2                       shift and go to state 89
    endLlamada                     shift and go to state 90
    exp                            shift and go to state 91
    texp                           shift and go to state 69
    gexp                           shift and go to state 70
    mexp                           shift and go to state 71
    termino                        shift and go to state 72
    factor                         shift and go to state 73
    varcte                         shift and go to state 75
    variable                       shift and go to state 76
    llamada                        shift and go to state 77

state 59

    (67) repeticion -> condicional .

    SI              reduce using rule 67 (repeticion -> condicional .)
    REGRESA         reduce using rule 67 (repeticion -> condicional .)
    LEE             reduce using rule 67 (repeticion -> condicional .)
    ESCRIBE         reduce using rule 67 (repeticion -> condicional .)
    ID              reduce using rule 67 (repeticion -> condicional .)
    MIENTRAS        reduce using rule 67 (repeticion -> condicional .)
    DESDE           reduce using rule 67 (repeticion -> condicional .)
    RCURLY          reduce using rule 67 (repeticion -> condicional .)


state 60

    (68) repeticion -> nocondicional .

    SI              reduce using rule 68 (repeticion -> nocondicional .)
    REGRESA         reduce using rule 68 (repeticion -> nocondicional .)
    LEE             reduce using rule 68 (repeticion -> nocondicional .)
    ESCRIBE         reduce using rule 68 (repeticion -> nocondicional .)
    ID              reduce using rule 68 (repeticion -> nocondicional .)
    MIENTRAS        reduce using rule 68 (repeticion -> nocondicional .)
    DESDE           reduce using rule 68 (repeticion -> nocondicional .)
    RCURLY          reduce using rule 68 (repeticion -> nocondicional .)


state 61

    (104) variable -> ID .
    (50) iniciaLlamada -> ID . LPAREN

    EQUAL           reduce using rule 104 (variable -> ID .)
    TIMES           reduce using rule 104 (variable -> ID .)
    DIVIDE          reduce using rule 104 (variable -> ID .)
    PLUS            reduce using rule 104 (variable -> ID .)
    MINUS           reduce using rule 104 (variable -> ID .)
    LESS            reduce using rule 104 (variable -> ID .)
    LESSO           reduce using rule 104 (variable -> ID .)
    GREATER         reduce using rule 104 (variable -> ID .)
    GREATERO        reduce using rule 104 (variable -> ID .)
    NOTEQUAL        reduce using rule 104 (variable -> ID .)
    EQUALS          reduce using rule 104 (variable -> ID .)
    AND             reduce using rule 104 (variable -> ID .)
    OR              reduce using rule 104 (variable -> ID .)
    RBRACKET        reduce using rule 104 (variable -> ID .)
    COMMA           reduce using rule 104 (variable -> ID .)
    RPAREN          reduce using rule 104 (variable -> ID .)
    SEMICOLON       reduce using rule 104 (variable -> ID .)
    LPAREN          shift and go to state 93


state 62

    (69) condicional -> MIENTRAS . regWhile LPAREN exp RPAREN whileCond HAZ bloque endWhile
    (70) regWhile -> . empty
    (1) empty -> .

    LPAREN          reduce using rule 1 (empty -> .)
